fix(moudle,permission): 用户和模块删除时应当同步删除权限记录
Signed-off-by: 汪世胤 <wangshiyin@hinadt.com>